--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.54MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.59MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-10.88MB/s(Youtube:不良林), server: 154.31.115.216, port: 57990, type: vmess, uuid: 3300c50a-ecbb-4df0-bd92-8c2d29a08cbb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-448.5KB/s(Youtube:不良林), server: 5.183.176.83, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.14MB/s(Youtube:不良林), server: 85.208.108.59, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.63MB/s(Youtube:不良林), server: 85.208.108.60, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2, server: 85.208.108.60, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-969.7KB/s(Youtube:不良林), server: 85.208.108.59, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-361.6KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.32MB/s(Youtube:不良林), server: 116.63.103.11, port: 45758, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇨🇳 中国-8.35MB/s(Youtube:不良林), server: 14.119.87.180, port: 45149, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.180}}
+  - {name: 🇫🇷 法国-917.5KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-448.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-969.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-448.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-969.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-448.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-969.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-448.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-969.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-448.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-969.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-448.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-969.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-448.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-969.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
