--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-189.8KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-5.31MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-8.35MB/s(Youtube:不良林), server: 14.119.87.180, port: 45149, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.180}}
+  - {name: 🇯🇵 日本-237.7KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇫🇷 法国-419.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-714.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-322.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.95MB/s(Youtube:不良林), server: 14.119.87.180, port: 45149, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.180}}
   - {name: 🇫🇷 法国-917.5KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
   - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-189.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-237.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-419.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-189.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-237.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-419.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,34 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-189.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-237.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-419.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-189.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-237.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-419.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-189.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-237.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-419.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-189.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-237.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-419.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-189.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-237.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-419.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.95MB/s(Youtube:不良林)
       - 🇫🇷 法国-917.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
 rules:
